<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/overlay_light_80"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/spacing_large">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_middle" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:gravity="center"
            android:id="@+id/txtAgreeTitle"
            android:text="@string/agree_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/grey_90"
            app:fontFamily="sans-serif-medium" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_middle" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="2dp"
            app:cardElevation="2dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/spacing_xlarge">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spacing_middle" />
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/agree_chk_01"
                    android:id="@+id/chkAgree01"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spacing_middle" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="7"
                    android:singleLine="false"
                    android:scrollbars="vertical"
                    android:text="@string/agree_text_01"
                    android:id="@+id/txtAgree01"
                    android:textColor="@color/grey_60"
                    app:fontFamily="sans-serif-light" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_middle" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="2dp"
            app:cardElevation="2dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/spacing_xlarge">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spacing_middle" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/agree_chk_02"
                    android:id="@+id/chkAgree02"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spacing_middle" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="7"
                    android:singleLine="false"
                    android:scrollbars="vertical"
                    android:id="@+id/txtAgree02"
                    android:text="@string/agree_text_02"
                    android:textColor="@color/grey_60"
                    app:fontFamily="sans-serif-light" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_large" />

        <Button
            android:id="@+id/btnAgree"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/btn_rounded_primary"
            android:text="@string/agree_btn"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textColor="@color/mainColor"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>